--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ input[type="checkbox"]{
         padding: 0px;
     }
     html,body{
-        overflow-x: hidden;
+        overflow-x: auto;
         scroll-behavior: smooth;
     }
     .main-bx{
